@@ -2067,10 +2067,11 @@ void RegisterTests_Window(ImGuiTestEngine* e)
         IM_CHECK_NO_RET(scroll_y == scroll_max_y);
 
         float expected_size_contents_y = 100 * ImGui::GetTextLineHeightWithSpacing() - style.ItemSpacing.y; // Newer definition of SizeContents as per 1.71
-        IM_CHECK_FLOAT_EQ_EPS(window->ContentSize.y, expected_size_contents_y);
+        IM_CHECK_FLOAT_EQ(window->ContentSize.y, expected_size_contents_y);
+        IM_CHECK_FLOAT_EQ(window->ContentSize.y, expected_size_contents_y);
 
         float expected_scroll_max_y = expected_size_contents_y + window->WindowPadding.y * 2.0f - window->InnerRect.GetHeight();
-        IM_CHECK_FLOAT_EQ_EPS(scroll_max_y, expected_scroll_max_y);
+        IM_CHECK_FLOAT_EQ(scroll_max_y, expected_scroll_max_y);
     };
 
     // ## Test that ScrollMax values are correctly zero (we had/have bugs where they are seldomly == BorderSize)
@@ -2187,11 +2188,11 @@ void RegisterTests_Window(ImGuiTestEngine* e)
             if (test_step % 2 == 0)
             {
                 IM_CHECK_GT(vars.GotScroll.x, 1.f);
-                IM_CHECK_FLOAT_EQ_EPS(vars.GotScroll.y, 0.f);
+                IM_CHECK_FLOAT_EQ(vars.GotScroll.y, 0.f);
             }
             else
             {
-                IM_CHECK_FLOAT_EQ_EPS(vars.GotScroll.x, 0.f);
+                IM_CHECK_FLOAT_EQ(vars.GotScroll.x, 0.f);
                 IM_CHECK_GT(vars.GotScroll.y, 1.f);
             }
         }
